added code to HTML file...again

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <li>Enter your Git notes here</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch name: creates a new branch and switches to it</li>
-          <li></li>
+          <li>git add [file]: adds a file as it looks now to your next commit between your local branch and cloud branch</li>
+          <li>git commit -m ['description']: commits staged content as a new commit to your branch</li>
+          <li>git clone [url]: retrieves a repository from a hosted location</li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
