Added style.css to the index html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href=".assets/style.css">
+
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -18,15 +20,30 @@
           <li>Enter your HTML notes here </li>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user</li>
-          <li>Metadata is used to make the page run but is not visible to the user except for the title element</li>
-          <li>Headers are numbered from 1 to 6 with 1 being the biggest and 6 being the smallest</li>
-          <li>Images have to be associated to a source URL to be rendered on a webpage</li>
+          <li>Metadata is used to make the page run but is not visible to the 
+            user except for the title element</li>
+          <li>Headers are numbered from 1 to 6 with 1 being the biggest and 
+            6 being the smallest</li>
+          <li>Images have to be associated to a source URL to be rendered on 
+            a webpage</li>
         </ul>
       </section>>
       <section class="card" id="css-section"">
         <h2>CSS</h2>
         <ul>
           <li>Enter your CSS notes here</li>
+          <li>CSS allows you to add stylistics to your website 
+            <li>CSS uses properties to establish syle specs of the website</li> 
+          <li>CSS sets properties using values already programmed into your computer</li>
+          <li>margins decide how much blank space you want in your websites appearance</li>
+          <li>Padding decides the heaviness of a photo in your website. this makes the picture bigger</li>
+          <li>its best to use commas with similar properties to keep from doing double work</li>
+          <li>to commit properties to the entire webpage, you simply use the * in front of your selector</li>
+          <li>the {} characters are used to open and close the selector</li>
+          <li>link element allows you to link to an external file. Especially important because
+            using external CSS files is recommended. It is recommended because of the ease in which you
+            can add the styles into the main branch but also for purposes of debugging ease.
+          </li>
         </ul>
       </section>"
       <section class="card" id="git-section">
@@ -34,10 +51,16 @@
         <ul>
           <li>Enter your Git notes here</li>
           <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch name: creates a new branch and switches to it</li>
-          <li>git add [file]: adds a file as it looks now to your next commit between your local branch and cloud branch</li>
-          <li>git commit -m ['description']: commits staged content as a new commit to your branch</li>
+          <li>git checkout -b branch name: creates a new branch and switches
+             to it</li>
+          <li>git add [file]: adds a file as it looks now to your next commit between 
+            your local branch and cloud branch</li>
+          <li>git commit -m ['description']: commits staged content as a new commit 
+            to your branch</li>
           <li>git clone [url]: retrieves a repository from a hosted location</li>
+          <li>git commands are listed in the document that is saved on your favorites</li>
+          <li>git branch -d: this is how you delete a branch. need to be in another 
+            branch before you can delete</li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
