Add Javascript file to my code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id=""html-section"> 
@@ -67,6 +68,21 @@
         <h2>Javascript</h2>
         <ul>
           <li>Enter your Javascript notes here</li>
+          <li>JavaScript allows you to add interactivity to your website
+            this can include buttons, forms, and API's
+          </li>
+          <li>the function querySelector allows you to grab a reference to your
+            heading and store it in a variable that you name
+          </li>
+          <li>The console.log method allows you to output a message to the console
+            by adding an argument
+          </li>
+          <li>JavaScript can usually be added to the end of the body element
+             of whatever working index is being used
+          </li>
+          <li>if statements allow us to interrupt control flow</li>
+          <li>Control flow is usually top to bottom in a js file</li>
+
         </ul>
       </section>
     </main>
@@ -74,5 +90,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script> 
   </body>
 </html>
