Added js functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-      <h2>Open the Console to See What's Happening ✨</h2>
+      <h2>✨Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id=""html-section"> 
@@ -82,7 +82,9 @@
           </li>
           <li>if statements allow us to interrupt control flow</li>
           <li>Control flow is usually top to bottom in a js file</li>
-
+          <li>functions allow us to call and reuse code</li>
+          <li>comments in JS are made using the /* notation to open a comment and
+              */ to close the comment in a js file </li>
         </ul>
       </section>
     </main>
